major gui refactoring (view separation)

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <button type="button" id="stepSimulationButton" onclick="onSimulateOneTurn();">Simulate 1 turn</button>
     <button type="button" id="runSimulationButton" onclick="onToggleSimulation();">Run simulation</button>
     <div class="mainContainer">
-        <div class="worldMapItem">
-            <table id="worldMapTable">
-            </table>
+        <div id="worldMapItem">
+            Kek1
         </div>
-        <div class="tileViewItem">
-            <p id="tileView">
-                Kek!
-            </p>
+        <div id="tileViewItem">
+            Kek2
+        </div>
+        <div id="creatureViewItem">
+            Kek3
         </div>
     </div>
     <script type="module" src="./script.js"></script>
